dataintegration-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: dataintegration
  name: dataintegration
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: dataintegration
          servicePort: 80
status:
  loadBalancer: {}
